# openfoodfacts-exports

./: .env  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/scripts/: check_exports.py
.github/workflows/: check-exports.yml  container-build.yml  container-deploy.yml  release-please.yml
docker/: dev.yml  prod.yml
docs/: API_ACCESS.md  DATA_EXPORTS.md  DEVELOPER_GUIDE.md  README.md  TROUBLESHOOTING.md
openfoodfacts_exports/: __main__.py  main.py  scheduler.py  schemas.py  settings.py  tasks.py  update_listener.py  utils.py
openfoodfacts_exports/exports/: __init__.py  csv.py  csv_from_parquet.py  historical_events.py  parquet.py
openfoodfacts_exports/exports/csv/: mobile.py
openfoodfacts_exports/exports/csv_export/: __init__.py  csv_from_parquet.py  csv_pq.py  processes.py  utils.py
openfoodfacts_exports/exports/parquet/: __init__.py  beauty.py  common.py  food.py  price.py
openfoodfacts_exports/tasks/: __init__.py  historical_events.py  images.py  revisions.py
openfoodfacts_exports/workers/: main.py  queues.py  redis.py
tests/integration/: conftest.py
tests/integration/exports/: test_parquet.py
tests/unit/: test_tasks.py
tests/unit/exports/: test_csv.py  test_historical_events.py  test_parquet.py
tests/unit/exports/parquet/: test_food.py  test_parquet.py
tests/unit/tasks/: test_historical_events.py  test_images.py  test_revisions.py
tutorials/hands-on-data/: README.md  open food facts data tutorial.ipynb  requirements.txt
