[project]
name = "openfoodfacts-exports"
version = "0.4.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10.4",
    "duckdb==1.1.2",
    "huggingface-hub>=0.26.2",
    "minio>=7.2.10",
    "more-itertools>=10.5.0",
    "openfoodfacts>=2.2.0",
    "orjson>=3.10.11",
    "pyarrow>=18.0.0",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "rq>=2.0.0",
    "sentry-sdk>=2.18.0",
    "toml>=0.10.2",
    "tqdm>=4.66.6",
    "typer>=0.12.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openfoodfacts_exports"]

[tool.ruff.lint]
select = ["E", "F"]
pycodestyle.max-doc-length = 88

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.4",
    "pre-commit>=4.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
    "types-pytz>=2024.2.0.20241003",
    "types-toml>=0.10.8.20240310",
]
